button for clear on find result dialog

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -41,21 +41,21 @@ BEGIN
     COMBOBOX        IDFINDWHAT,15,13,286,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,28,25,8
     COMBOBOX        IDREPLACEWITH,27,26,274,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "Filter&s",IDD_FINDINFILES_FILTERS_STATIC,63,41,19,10,SS_NOTIFY
-    COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,83,39,218,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    LTEXT           "Director&y:",IDD_FINDINFILES_DIR_STATIC,1,48,33,8
-    COMBOBOX        IDD_FINDINFILES_DIR_COMBO,2,57,345,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,348,56,10,13
+    RTEXT           "Filter&s",IDD_FINDINFILES_FILTERS_STATIC,125,41,19,10,SS_NOTIFY
+    COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,145,39,156,114,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    LTEXT           "A&t:",IDD_FINDINFILES_DIR_STATIC,3,48,10,8
+    COMBOBOX        IDD_FINDINFILES_DIR_COMBO,2,56,345,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,348,56,10,12
     CONTROL         "In working dir.",IDD_FINDINFILES_FOLDERFOLLOWSDOC_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,169,77,57,12
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,166,73,57,9
     CONTROL         "In all sub&-folders",IDD_FINDINFILES_RECURSIVE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,169,90,60,14
-    CONTROL         "In hidden",IDD_FINDINFILES_INHIDDENDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,92,43,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,166,85,60,8
+    CONTROL         "In hidden",IDD_FINDINFILES_INHIDDENDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,166,96,41,9
     CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,33,57,13
     CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,47,83,11
     PUSHBUTTON      "Mark All",IDCMARKALL,303,12,54,12
-    CONTROL         "In selec&tion",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,170,43,47,9
-    PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,303,26,54,14
+    CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,157,43,47,9
+    PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,303,25,54,14
     CONTROL         "&Backward direction",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,60,71,13
     CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,76,70,11
     CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,76,48,11
@@ -68,21 +68,23 @@ BEGIN
     PUSHBUTTON      "",IDC_FINDPREV,302,12,13,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "Find Next",IDOK,303,12,54,11,WS_GROUP
     CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,3,8,8
-    PUSHBUTTON      "Count&/total",IDCCOUNTALL,105,40,42,13
-    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,249,60,52,26,BS_MULTILINE
-    PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,249,43,52,15,BS_MULTILINE
-    PUSHBUTTON      "Re&place",IDREPLACE,303,24,54,13
-    PUSHBUTTON      "Replace &All",IDREPLACEALL,303,43,55,15
-    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,60,55,26,BS_MULTILINE
+    PUSHBUTTON      "Total&/count",IDCCOUNTALL,108,40,41,12
+    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,258,58,44,26,BS_MULTILINE
+    PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,258,42,44,15,BS_MULTILINE
+    PUSHBUTTON      "Re&place",IDREPLACE,303,25,54,13
+    PUSHBUTTON      "Replace &All",IDREPLACEALL,303,42,55,15
+    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,58,55,26,BS_MULTILINE
     PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,303,12,55,12,WS_GROUP
-    PUSHBUTTON      "&Replace in Files",IDD_FINDINFILES_REPLACEINFILES,303,26,55,14
-    PUSHBUTTON      "Close",IDCANCEL,322,93,36,13
-    GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,158,103,199,17
-    CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,156,109,55,8
-    CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,254,109,59,9
-    CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,320,109,32,9
-    CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,213,110,37,7
+    PUSHBUTTON      "Close",IDCANCEL,330,94,28,12
+    GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,162,104,195,16
+    CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,159,110,55,8
+    CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,256,110,59,8
+    CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,322,110,32,8
+    CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,216,112,36,6
     PUSHBUTTON      "",IDC_FINDNEXT,316,12,41,12,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,303,24,55,14
+    PUSHBUTTON      "Clear&, Find All",IDD_FINDINFILES_CLEAR_FIND,303,38,55,14
+    PUSHBUTTON      "Clear then -&>",IDC_CLEAR_FINDALL_CURRENTFILE,208,42,50,14
 END
 
 IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
