message none on find all dialog

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -41,20 +41,20 @@ BEGIN
     COMBOBOX        IDFINDWHAT,15,13,286,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,28,25,8
     COMBOBOX        IDREPLACEWITH,27,26,274,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "Filter&s",IDD_FINDINFILES_FILTERS_STATIC,125,41,19,10,SS_NOTIFY
-    COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,145,39,156,114,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    LTEXT           "A&t:",IDD_FINDINFILES_DIR_STATIC,3,48,10,8
-    COMBOBOX        IDD_FINDINFILES_DIR_COMBO,2,56,345,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    RTEXT           "Filter&s",IDD_FINDINFILES_FILTERS_STATIC,122,43,19,10,SS_NOTIFY
+    COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,142,41,159,114,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    LTEXT           "A&t:",IDD_FINDINFILES_DIR_STATIC,1,58,10,8
+    COMBOBOX        IDD_FINDINFILES_DIR_COMBO,10,56,337,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,348,56,10,12
     CONTROL         "In working dir.",IDD_FINDINFILES_FOLDERFOLLOWSDOC_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,166,73,57,9
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,73,57,9
     CONTROL         "In all sub&-folders",IDD_FINDINFILES_RECURSIVE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,166,85,60,8
-    CONTROL         "In hidden",IDD_FINDINFILES_INHIDDENDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,166,96,41,9
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,85,60,8
+    CONTROL         "In hidden",IDD_FINDINFILES_INHIDDENDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,96,41,9
     CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,33,57,13
     CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,47,83,11
     PUSHBUTTON      "Mark All",IDCMARKALL,303,12,54,12
-    CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,157,43,47,9
+    CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,156,43,47,9
     PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,303,25,54,14
     CONTROL         "&Backward direction",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,60,71,13
     CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,76,70,11
@@ -83,8 +83,9 @@ BEGIN
     CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,216,112,36,6
     PUSHBUTTON      "",IDC_FINDNEXT,316,12,41,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,303,24,55,14
-    PUSHBUTTON      "Clear&, Find All",IDD_FINDINFILES_CLEAR_FIND,303,38,55,14
-    PUSHBUTTON      "Clear then -&>",IDC_CLEAR_FINDALL_CURRENTFILE,208,42,50,14
+    PUSHBUTTON      "Clear&, Find All",IDD_FINDINFILES_CLEAR_FIND,303,38,55,13
+    PUSHBUTTON      "Clear then &=>",IDC_CLEAR_FINDALL_CURRENTFILE,208,42,50,15
+    PUSHBUTTON      "Clear t&hen =>",IDC_CLEAR_FINDALL_OPENEDFILES,208,58,50,14
 END
 
 IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
