--- a/PowerEditor/src/WinControls/WindowsDlg/WindowsDlg.rc
+++ b/PowerEditor/src/WinControls/WindowsDlg/WindowsDlg.rc
@@ -28,24 +28,23 @@
 
 #include <windows.h>
 #include "WindowsDlgRc.h"
-
-IDD_WINDOWS DIALOGEX 0, 0, 470, 300
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME | DS_MODALFRAME
-CAPTION "Windows"
+// | WS_THICKFRAME
+IDD_WINDOWS DIALOGEX 0, 0, 419, 205
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_SYSMENU | DS_MODALFRAME
 FONT 9, TEXT("MS Shell Dlg"), 400, 0, 0x1
 BEGIN
     CONTROL         "", IDC_WINDOWS_LIST, TEXT("SysListView32"), LVS_REPORT | LVS_OWNERDATA | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP, 7, 7, 206, 160
-    DEFPUSHBUTTON   "&Go to",IDOK,219,7,60,14
-    PUSHBUTTON      "&Save",IDC_WINDOWS_SAVE,219,26,60,14
-    PUSHBUTTON      "&Close",IDC_WINDOWS_CLOSE,219,44,60,14
-    PUSHBUTTON      "Sort &tabs",IDC_WINDOWS_SORT,219,60,60,14
-    PUSHBUTTON      "&OK",IDCANCEL,219,169,60,14
+    DEFPUSHBUTTON   "&Go to",IDOK,219,7,41,11
+    PUSHBUTTON      "&Save",IDC_WINDOWS_SAVE,219,26,41,11
+    PUSHBUTTON      "&Close",IDC_WINDOWS_CLOSE,219,44,41,11
+    PUSHBUTTON      "Sort &tabs",IDC_WINDOWS_SORT,219,60,41,11
+    PUSHBUTTON      "&OK",IDCANCEL,219,169,41,11
 END
 
 IDR_WINDOWS_MENU MENU
 BEGIN
 	MENUITEM "Recent Window",              IDM_WINDOW_MRU_FIRST, GRAYED
-	MENUITEM "&Windows...",               	IDM_WINDOW_WINDOWS
+	MENUITEM "&Manage them",               	IDM_WINDOW_WINDOWS
 END
 
 
