--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -376,7 +376,6 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Column Mode...",        IDM_EDIT_COLUMNMODETIP
         MENUITEM "Column Editor...",        IDM_EDIT_COLUMNMODE
-        MENUITEM "Character Panel",        IDM_EDIT_CHAR_PANEL
         MENUITEM "Clipboard History",      IDM_EDIT_CLIPBOARDHISTORY_PANEL
         MENUITEM SEPARATOR
         MENUITEM "Set Read-Only",           IDM_EDIT_SETREADONLY
@@ -385,7 +384,6 @@ BEGIN
 
     POPUP "Search"
     BEGIN
-        // MENUITEM "&Find...",                    IDM_SEARCH_FIND
         MENUITEM "&Find/Replace",                 IDM_SEARCH_REPLACE
         MENUITEM "Find/Replace in Files",            IDM_SEARCH_FINDINFILES
         MENUITEM "Find &Next",                  IDM_SEARCH_FINDNEXT
@@ -556,6 +554,7 @@ BEGIN
         MENUITEM "Folder as Workspace",   IDM_VIEW_FILEBROWSER
         MENUITEM "Document Map",          IDM_VIEW_DOC_MAP
         MENUITEM "Function List",         IDM_VIEW_FUNC_LIST
+        MENUITEM "Character Panel",        IDM_VIEW_CHAR_PANEL
         MENUITEM SEPARATOR
         MENUITEM "Synchronize Vertical Scrolling",      IDM_VIEW_SYNSCROLLV
         MENUITEM "Synchronize Horizontal Scrolling",    IDM_VIEW_SYNSCROLLH
@@ -1003,7 +1002,7 @@ BEGIN
         MENUITEM "New",                 IDM_SYSTRAYPOPUP_NEWDOC
         MENUITEM "New and Paste",       IDM_SYSTRAYPOPUP_NEW_AND_PASTE
         MENUITEM "Open...",             IDM_SYSTRAYPOPUP_OPENFILE
-        MENUITEM "Find in Files...",    IDM_SEARCH_FINDINFILES
+        MENUITEM "Find/Replace in Files",    IDM_SEARCH_FINDINFILES
         MENUITEM SEPARATOR
         MENUITEM "Close Tray Icon",     IDM_SYSTRAYPOPUP_CLOSE
     END
