--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -48,13 +48,13 @@ BEGIN
     PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,348,56,10,12
     CONTROL         "In working dir.",IDD_FINDINFILES_FOLDERFOLLOWSDOC_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,73,57,9
-    CONTROL         "In all sub&-folders",IDD_FINDINFILES_RECURSIVE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,85,60,8
+    CONTROL         "In all sub&-dir.",IDD_FINDINFILES_RECURSIVE_CHECK,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,85,51,8
     CONTROL         "In hidden",IDD_FINDINFILES_INHIDDENDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,96,41,9
     CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,33,57,13
     CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,47,83,11
     PUSHBUTTON      "Mark All",IDCMARKALL,303,12,54,12
-    CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,156,43,47,9
+    CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,151,42,47,9
     PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,303,25,54,14
     CONTROL         "&Backward direction",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,60,71,13
     CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,76,70,11
@@ -68,14 +68,14 @@ BEGIN
     PUSHBUTTON      "",IDC_FINDPREV,302,12,13,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "Find Next",IDOK,303,12,54,11,WS_GROUP
     CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,3,8,8
-    PUSHBUTTON      "Total&/count",IDCCOUNTALL,108,40,41,12
+    PUSHBUTTON      "Total&/count",IDCCOUNTALL,282,92,41,12
     PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,258,58,44,26,BS_MULTILINE
     PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,258,42,44,15,BS_MULTILINE
     PUSHBUTTON      "Re&place",IDREPLACE,303,25,54,13
     PUSHBUTTON      "Replace &All",IDREPLACEALL,303,42,55,15
     PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,58,55,26,BS_MULTILINE
     PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,303,12,55,12,WS_GROUP
-    PUSHBUTTON      "Close",IDCANCEL,330,94,28,12
+    PUSHBUTTON      "Close",IDCANCEL,332,94,26,12
     GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,162,104,195,16
     CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,159,110,55,8
     CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,256,110,59,8
@@ -83,7 +83,7 @@ BEGIN
     CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,216,112,36,6
     PUSHBUTTON      "",IDC_FINDNEXT,316,12,41,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,303,24,55,14
-    PUSHBUTTON      "Clear&, Find All",IDD_FINDINFILES_CLEAR_FIND,303,38,55,13
+    PUSHBUTTON      "Clear&; Find All",IDD_FINDINFILES_CLEAR_FIND,303,40,55,13
     PUSHBUTTON      "Clear then &=>",IDC_CLEAR_FINDALL_CURRENTFILE,208,42,50,15
     PUSHBUTTON      "Clear t&hen =>",IDC_CLEAR_FINDALL_OPENEDFILES,208,58,50,14
 END
