add find/replace feature switch & copy

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -39,53 +39,57 @@ FONT 9, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     RTEXT           "&Find",IDFINDWHAT_STATIC,1,14,13,8
     COMBOBOX        IDFINDWHAT,15,13,286,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,28,25,8
-    COMBOBOX        IDREPLACEWITH,27,26,274,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "Filter&s",IDD_FINDINFILES_FILTERS_STATIC,122,43,19,10,SS_NOTIFY
-    COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,142,41,159,114,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    LTEXT           "A&t:",IDD_FINDINFILES_DIR_STATIC,1,58,10,8
-    COMBOBOX        IDD_FINDINFILES_DIR_COMBO,10,56,337,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,348,56,10,12
+    RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,30,25,8
+    COMBOBOX        IDREPLACEWITH,27,28,211,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    RTEXT           "Filter",IDD_FINDINFILES_FILTERS_STATIC,1,45,15,10,SS_NOTIFY
+    COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,17,43,161,114,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    LTEXT           "At:",IDD_FINDINFILES_DIR_STATIC,1,59,10,8
+    COMBOBOX        IDD_FINDINFILES_DIR_COMBO,10,57,337,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,348,57,10,12
     CONTROL         "In working dir.",IDD_FINDINFILES_FOLDERFOLLOWSDOC_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,73,57,9
     CONTROL         "In all sub&-dir.",IDD_FINDINFILES_RECURSIVE_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,85,51,8
     CONTROL         "In hidden",IDD_FINDINFILES_INHIDDENDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,96,41,9
     CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,33,57,13
-    CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,47,83,11
+    CONTROL         "Purge first",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,47,83,11
     PUSHBUTTON      "Mark All",IDCMARKALL,303,12,54,12
-    CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,151,42,47,9
-    PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,303,25,54,14
-    CONTROL         "&Backward direction",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,60,71,13
+    CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,159,91,47,9
+    PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,304,27,53,14
+    CONTROL         "Backward",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,61,43,13
     CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,76,70,11
     CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,76,48,11
-    CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,61,53,11
+    CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,62,53,11
     GROUPBOX        "Mode",IDC_MODE_STATIC,2,91,151,29
     CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,25,98,35,8
     CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,65,98,83,8
     CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,5,109,74,9
     CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,81,109,68,9
-    PUSHBUTTON      "",IDC_FINDPREV,302,12,13,12,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "",IDC_FINDPREV,303,12,13,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "Find Next",IDOK,303,12,54,11,WS_GROUP
     CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,3,8,8
-    PUSHBUTTON      "Total&/count",IDCCOUNTALL,282,92,41,12
-    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,258,58,44,26,BS_MULTILINE
-    PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,258,42,44,15,BS_MULTILINE
+    PUSHBUTTON      "Total&/count",IDCCOUNTALL,258,93,42,11
+    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,258,62,44,26,BS_MULTILINE
+    PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,258,46,44,15,BS_MULTILINE
     PUSHBUTTON      "Re&place",IDREPLACE,303,25,54,13
-    PUSHBUTTON      "Replace &All",IDREPLACEALL,303,42,55,15
-    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,58,55,26,BS_MULTILINE
+    PUSHBUTTON      "Replace &All",IDREPLACEALL,303,46,55,15
+    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,62,55,26,BS_MULTILINE
     PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,303,12,55,12,WS_GROUP
-    PUSHBUTTON      "Close",IDCANCEL,332,94,26,12
+    PUSHBUTTON      "Close",IDCANCEL,334,94,24,12
     GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,162,104,195,16
     CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,159,110,55,8
     CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,256,110,59,8
     CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,322,110,32,8
     CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,216,112,36,6
     PUSHBUTTON      "",IDC_FINDNEXT,316,12,41,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,303,24,55,14
-    PUSHBUTTON      "Clear&; Find All",IDD_FINDINFILES_CLEAR_FIND,303,40,55,13
-    PUSHBUTTON      "Clear then &=>",IDC_CLEAR_FINDALL_CURRENTFILE,208,42,50,15
-    PUSHBUTTON      "Clear t&hen =>",IDC_CLEAR_FINDALL_OPENEDFILES,208,58,50,14
+    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,303,38,55,14
+    PUSHBUTTON      "Clear&; Find All",IDD_FINDINFILES_CLEAR_FIND,303,25,55,13
+    PUSHBUTTON      "Clear and =>",IDC_CLEAR_FINDALL_CURRENTFILE,211,46,47,15
+    PUSHBUTTON      "Clear and &=>",IDC_CLEAR_FINDALL_OPENEDFILES,211,62,47,14
+    PUSHBUTTON      "swi&tch",IDC_FIND_REPLACE_SWAP,243,34,23,10
+    PUSHBUTTON      "cop&y",IDC_FIND_REPLACE_COPY,274,34,19,10
+    RTEXT           "",IDSWAP_S,244,25,17,9,0,WS_EX_RIGHT
+    RTEXT           "",IDCOPY_S,273,25,17,9,0,WS_EX_RIGHT
 END
 
 IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
