--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -38,11 +38,11 @@ CAPTION "Replace"
 FONT 9, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     RTEXT           "&Find",IDFINDWHAT_STATIC,1,14,13,8
-    COMBOBOX        IDFINDWHAT,15,13,286,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    COMBOBOX        IDFINDWHAT,15,13,229,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,30,25,8
-    COMBOBOX        IDREPLACEWITH,27,28,211,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    COMBOBOX        IDREPLACEWITH,26,28,201,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "Filter",IDD_FINDINFILES_FILTERS_STATIC,1,45,15,10,SS_NOTIFY
-    COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,17,43,161,114,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,16,43,161,114,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     LTEXT           "At:",IDD_FINDINFILES_DIR_STATIC,1,59,10,8
     COMBOBOX        IDD_FINDINFILES_DIR_COMBO,10,57,337,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,348,57,10,12
@@ -51,45 +51,48 @@ BEGIN
     CONTROL         "In all sub&-dir.",IDD_FINDINFILES_RECURSIVE_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,85,51,8
     CONTROL         "In hidden",IDD_FINDINFILES_INHIDDENDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,96,41,9
-    CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,33,57,13
-    CONTROL         "Purge first",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,47,83,11
+    CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,50,57,13
+    CONTROL         "Purge first",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,50,44,11
     PUSHBUTTON      "Mark All",IDCMARKALL,303,12,54,12
-    CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,159,91,47,9
-    PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,304,27,53,14
-    CONTROL         "Backward",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,61,43,13
-    CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,76,70,11
-    CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,76,48,11
-    CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,90,62,53,11
+    CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,159,94,47,9
+    PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,304,25,53,14
+    CONTROL         "Backward",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,62,43,13
+    CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,76,69,11
+    CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,76,48,11
+    CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,63,53,11
     GROUPBOX        "Mode",IDC_MODE_STATIC,2,91,151,29
-    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,25,98,35,8
+    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,26,98,35,8
     CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,65,98,83,8
     CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,5,109,74,9
-    CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,81,109,68,9
-    PUSHBUTTON      "",IDC_FINDPREV,303,12,13,12,BS_MULTILINE | WS_GROUP
+    CONTROL         "&Dot matches all",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,83,109,64,9
+    PUSHBUTTON      "",IDC_FINDPREV,346,12,13,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "Find Next",IDOK,303,12,54,11,WS_GROUP
-    CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,3,8,8
-    PUSHBUTTON      "Total&/count",IDCCOUNTALL,258,93,42,11
-    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,258,62,44,26,BS_MULTILINE
-    PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,258,46,44,15,BS_MULTILINE
-    PUSHBUTTON      "Re&place",IDREPLACE,303,25,54,13
-    PUSHBUTTON      "Replace &All",IDREPLACEALL,303,46,55,15
-    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,62,55,26,BS_MULTILINE
-    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,303,12,55,12,WS_GROUP
+    CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,2,8,8
+    PUSHBUTTON      "Total&/count",IDCCOUNTALL,158,75,42,11
+    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,258,66,44,26,BS_MULTILINE
+    PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,258,50,44,15,BS_MULTILINE
+    PUSHBUTTON      "Replacin&g found",IDREPLACE1,236,36,54,13
+    PUSHBUTTON      "Re&place, find next",IDREPLACE_FINDNEXT,291,36,67,13,BS_MULTILINE
+    PUSHBUTTON      "Replace &All",IDREPLACEALL,303,50,55,15
+    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,66,55,26,BS_MULTILINE
+    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,327,12,31,23,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "Close",IDCANCEL,334,94,24,12
     GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,162,104,195,16
     CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,159,110,55,8
     CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,256,110,59,8
     CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,322,110,32,8
     CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,216,112,36,6
-    PUSHBUTTON      "",IDC_FINDNEXT,316,12,41,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,303,38,55,14
-    PUSHBUTTON      "Clear&; Find All",IDD_FINDINFILES_CLEAR_FIND,303,25,55,13
-    PUSHBUTTON      "Clear and =>",IDC_CLEAR_FINDALL_CURRENTFILE,211,46,47,15
-    PUSHBUTTON      "Clear and &=>",IDC_CLEAR_FINDALL_OPENEDFILES,211,62,47,14
-    PUSHBUTTON      "swi&tch",IDC_FIND_REPLACE_SWAP,243,34,23,10
-    PUSHBUTTON      "cop&y",IDC_FIND_REPLACE_COPY,274,34,19,10
-    RTEXT           "",IDSWAP_S,244,25,17,9,0,WS_EX_RIGHT
-    RTEXT           "",IDCOPY_S,273,25,17,9,0,WS_EX_RIGHT
+    PUSHBUTTON      "",IDC_FINDNEXT,304,12,39,12,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,305,36,53,13
+    PUSHBUTTON      "Clear&; =>",IDD_FINDINFILES_CLEAR_FIND,305,12,22,23,BS_MULTILINE
+    PUSHBUTTON      "Clear...=>",IDC_CLEAR_FINDALL_CURRENTFILE,221,50,37,15
+    PUSHBUTTON      "Clear...&=>",IDC_CLEAR_FINDALL_OPENEDFILES,221,66,37,14
+    PUSHBUTTON      "swi&tch",IDC_FIND_REPLACE_SWAP,247,10,22,10
+    PUSHBUTTON      "cop&y",IDC_FIND_REPLACE_COPY,277,10,19,10
+    RTEXT           "",IDSWAP_S,249,20,17,8,0,WS_EX_RIGHT
+    RTEXT           "",IDCOPY_S,278,20,17,8,0,WS_EX_RIGHT
+    PUSHBUTTON      "Redo&,",IDC_REDO,1,42,24,10
+    PUSHBUTTON      "Undo&.",IDC_UNDO,30,42,24,10
 END
 
 IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
