--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -39,8 +39,8 @@ FONT 9, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     RTEXT           "&Find",IDFINDWHAT_STATIC,1,14,13,8
     COMBOBOX        IDFINDWHAT,15,13,229,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,30,25,8
-    COMBOBOX        IDREPLACEWITH,26,28,201,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,29,25,8
+    COMBOBOX        IDREPLACEWITH,26,27,201,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "Filter",IDD_FINDINFILES_FILTERS_STATIC,1,45,15,10,SS_NOTIFY
     COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,16,43,161,114,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     LTEXT           "At:",IDD_FINDINFILES_DIR_STATIC,1,59,10,8
@@ -65,13 +65,13 @@ BEGIN
     CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,65,98,83,8
     CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,5,109,74,9
     CONTROL         "&Dot matches all",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,83,109,64,9
-    PUSHBUTTON      "",IDC_FINDPREV,346,12,13,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "Find Next",IDOK,303,12,54,11,WS_GROUP
+    PUSHBUTTON      "",IDC_FINDPREV,344,12,13,12,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "Find Next",IDOK,305,11,52,12,WS_GROUP
     CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,2,8,8
     PUSHBUTTON      "Total&/count",IDCCOUNTALL,158,75,42,11
     PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,258,66,44,26,BS_MULTILINE
     PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,258,50,44,15,BS_MULTILINE
-    PUSHBUTTON      "Replacin&g found",IDREPLACE1,236,36,54,13
+    PUSHBUTTON      "Replacin&g only",IDREPLACE1,238,36,52,13
     PUSHBUTTON      "Re&place, find next",IDREPLACE_FINDNEXT,291,36,67,13,BS_MULTILINE
     PUSHBUTTON      "Replace &All",IDREPLACEALL,303,50,55,15
     PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,66,55,26,BS_MULTILINE
@@ -82,7 +82,7 @@ BEGIN
     CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,256,110,59,8
     CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,322,110,32,8
     CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,216,112,36,6
-    PUSHBUTTON      "",IDC_FINDNEXT,304,12,39,12,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "",IDC_FINDNEXT,305,12,38,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,305,36,53,13
     PUSHBUTTON      "Clear&; =>",IDD_FINDINFILES_CLEAR_FIND,305,12,22,23,BS_MULTILINE
     PUSHBUTTON      "Clear...=>",IDC_CLEAR_FINDALL_CURRENTFILE,221,50,37,15
@@ -92,7 +92,7 @@ BEGIN
     RTEXT           "",IDSWAP_S,249,20,17,8,0,WS_EX_RIGHT
     RTEXT           "",IDCOPY_S,278,20,17,8,0,WS_EX_RIGHT
     PUSHBUTTON      "Redo&,",IDC_REDO,1,42,24,10
-    PUSHBUTTON      "Undo&.",IDC_UNDO,30,42,24,10
+    PUSHBUTTON      "Undo&.",IDC_UNDO,31,42,24,10
 END
 
 IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
