add find/replace feature replace only

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -38,9 +38,9 @@ CAPTION "Replace"
 FONT 9, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     RTEXT           "&Find",IDFINDWHAT_STATIC,1,14,13,8
-    COMBOBOX        IDFINDWHAT,15,13,229,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,29,25,8
-    COMBOBOX        IDREPLACEWITH,26,27,201,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    COMBOBOX        IDFINDWHAT,15,13,287,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,30,25,8
+    COMBOBOX        IDREPLACEWITH,26,28,200,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "Filter",IDD_FINDINFILES_FILTERS_STATIC,1,45,15,10,SS_NOTIFY
     COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,16,43,161,114,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     LTEXT           "At:",IDD_FINDINFILES_DIR_STATIC,1,59,10,8
@@ -53,7 +53,7 @@ BEGIN
     CONTROL         "In hidden",IDD_FINDINFILES_INHIDDENDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,96,41,9
     CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,50,57,13
     CONTROL         "Purge first",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,50,44,11
-    PUSHBUTTON      "Mark All",IDCMARKALL,303,12,54,12
+    PUSHBUTTON      "Mark All",IDCMARKALL,304,12,53,12
     CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,159,94,47,9
     PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,304,25,53,14
     CONTROL         "Backward",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,62,43,13
@@ -66,33 +66,33 @@ BEGIN
     CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,5,109,74,9
     CONTROL         "&Dot matches all",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,83,109,64,9
     PUSHBUTTON      "",IDC_FINDPREV,344,12,13,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "Find Next",IDOK,305,11,52,12,WS_GROUP
+    PUSHBUTTON      "Find Next",IDOK,306,12,51,12,WS_GROUP
     CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,2,8,8
     PUSHBUTTON      "Total&/count",IDCCOUNTALL,158,75,42,11
-    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,258,66,44,26,BS_MULTILINE
-    PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,258,50,44,15,BS_MULTILINE
-    PUSHBUTTON      "Replacin&g only",IDREPLACE1,238,36,52,13
-    PUSHBUTTON      "Re&place, find next",IDREPLACE_FINDNEXT,291,36,67,13,BS_MULTILINE
-    PUSHBUTTON      "Replace &All",IDREPLACEALL,303,50,55,15
-    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,66,55,26,BS_MULTILINE
-    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,327,12,31,23,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "Close",IDCANCEL,334,94,24,12
+    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,258,67,44,26,BS_MULTILINE
+    PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,258,54,44,12,BS_MULTILINE
+    PUSHBUTTON      "Replacin&g only",IDREPLACE1,305,31,52,11
+    PUSHBUTTON      "Re&place, find next",IDREPLACE_FINDNEXT,291,42,67,11,BS_MULTILINE
+    PUSHBUTTON      "Replace &All",IDREPLACEALL,303,54,55,12
+    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,67,55,26,BS_MULTILINE
+    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,326,30,32,12,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "Close",IDCANCEL,334,97,24,10
     GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,162,104,195,16
     CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,159,110,55,8
     CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,256,110,59,8
     CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,322,110,32,8
     CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,216,112,36,6
     PUSHBUTTON      "",IDC_FINDNEXT,305,12,38,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,305,36,53,13
-    PUSHBUTTON      "Clear&; =>",IDD_FINDINFILES_CLEAR_FIND,305,12,22,23,BS_MULTILINE
-    PUSHBUTTON      "Clear...=>",IDC_CLEAR_FINDALL_CURRENTFILE,221,50,37,15
-    PUSHBUTTON      "Clear...&=>",IDC_CLEAR_FINDALL_OPENEDFILES,221,66,37,14
-    PUSHBUTTON      "swi&tch",IDC_FIND_REPLACE_SWAP,247,10,22,10
-    PUSHBUTTON      "cop&y",IDC_FIND_REPLACE_COPY,277,10,19,10
-    RTEXT           "",IDSWAP_S,249,20,17,8,0,WS_EX_RIGHT
-    RTEXT           "",IDCOPY_S,278,20,17,8,0,WS_EX_RIGHT
+    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,305,42,53,12
+    PUSHBUTTON      "Clear&;",IDD_FINDINFILES_CLEAR_FIND,326,19,32,11,BS_MULTILINE
+    PUSHBUTTON      "Clear=>..",IDC_CLEAR_FINDALL_CURRENTFILE,224,54,34,12
+    PUSHBUTTON      "Clear&=>..",IDC_CLEAR_FINDALL_OPENEDFILES,224,67,34,12
+    PUSHBUTTON      "swi&tch",IDC_FIND_REPLACE_SWAP,242,26,22,10
+    PUSHBUTTON      "cop&y",IDC_FIND_REPLACE_COPY,282,25,18,11
+    RTEXT           "",IDSWAP_S,226,25,15,8,0,WS_EX_RIGHT
+    RTEXT           "",IDCOPY_S,267,25,13,8,0,WS_EX_RIGHT
     PUSHBUTTON      "Redo&,",IDC_REDO,1,42,24,10
-    PUSHBUTTON      "Undo&.",IDC_UNDO,31,42,24,10
+    PUSHBUTTON      "Undo&.",IDC_UNDO,34,42,24,10
 END
 
 IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
