--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -38,7 +38,7 @@ CAPTION "Replace"
 FONT 9, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     RTEXT           "&Find",IDFINDWHAT_STATIC,1,14,13,8
-    COMBOBOX        IDFINDWHAT,15,13,287,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+    COMBOBOX        IDFINDWHAT,15,13,287,214,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
     RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,30,25,8
     COMBOBOX        IDREPLACEWITH,26,28,200,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "Filter",IDD_FINDINFILES_FILTERS_STATIC,1,45,15,10,SS_NOTIFY
@@ -83,8 +83,8 @@ BEGIN
     CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,322,110,32,8
     CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,216,112,36,6
     PUSHBUTTON      "",IDC_FINDNEXT,305,12,38,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,305,42,53,12
-    PUSHBUTTON      "Clear&;",IDD_FINDINFILES_CLEAR_FIND,326,19,32,11,BS_MULTILINE
+    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,305,43,53,12
+    PUSHBUTTON      "Clear&;",IDD_FINDINFILES_CLEAR_FIND,326,18,32,11,BS_MULTILINE
     PUSHBUTTON      "Clear=>..",IDC_CLEAR_FINDALL_CURRENTFILE,224,54,34,12
     PUSHBUTTON      "Clear&=>..",IDC_CLEAR_FINDALL_OPENEDFILES,224,67,34,12
     PUSHBUTTON      "swi&tch",IDC_FIND_REPLACE_SWAP,242,26,22,10
