open Find result view, cursor go to beginning of 1st line

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -974,7 +974,7 @@ BEGIN
 		MENUITEM "&Run...",    IDM_EXECUTE
 	END
 
-	POPUP "Help"
+	POPUP "?"
 	BEGIN
 		MENUITEM "Command Line Arguments...",      IDM_CMDLINEARGUMENTS
 		MENUITEM SEPARATOR
