--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -68,10 +68,10 @@ BEGIN
     PUSHBUTTON      "",IDC_FINDPREV,344,12,13,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "Find Next",IDOK,306,12,51,12,WS_GROUP
     CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,2,8,8
-    PUSHBUTTON      "Total&/count",IDCCOUNTALL,158,75,42,11
+    PUSHBUTTON      "Sum&/Count",IDCCOUNTALL,158,75,42,11
     PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,258,67,44,26,BS_MULTILINE
     PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,258,54,44,12,BS_MULTILINE
-    PUSHBUTTON      "Replacin&g only",IDREPLACE1,307,28,50,12
+    PUSHBUTTON      "Replacin&g only",IDREPLACE1,308,28,50,12
     PUSHBUTTON      "Re&place, find next",IDREPLACE_FINDNEXT,294,41,64,12,BS_MULTILINE
     PUSHBUTTON      "Replace &All",IDREPLACEALL,303,54,55,12
     PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,67,55,26,BS_MULTILINE
@@ -87,10 +87,10 @@ BEGIN
     PUSHBUTTON      "Clear&;",IDD_FINDINFILES_CLEAR_FIND,326,18,32,11,BS_MULTILINE
     PUSHBUTTON      "Clear=>..",IDC_CLEAR_FINDALL_CURRENTFILE,224,54,34,12
     PUSHBUTTON      "Clear&=>..",IDC_CLEAR_FINDALL_OPENEDFILES,224,67,34,12
-    PUSHBUTTON      "swi&tch",IDC_FIND_REPLACE_SWAP,242,25,22,11
-    PUSHBUTTON      "cop&y",IDC_FIND_REPLACE_COPY,280,25,18,11
+    PUSHBUTTON      "swi&tch",IDC_FIND_REPLACE_SWAP,240,25,22,11
+    PUSHBUTTON      "cop&y",IDC_FIND_REPLACE_COPY,279,25,18,11
     RTEXT           "",IDSWAP_S,226,25,14,8,0,WS_EX_RIGHT
-    RTEXT           "",IDCOPY_S,267,25,13,8,0,WS_EX_RIGHT
+    RTEXT           "",IDCOPY_S,266,25,13,8,0,WS_EX_RIGHT
     PUSHBUTTON      "Redo&,",IDC_REDO,1,43,24,10
     PUSHBUTTON      "Undo&.",IDC_UNDO,32,43,24,10
 END
